Modify css of the first article

--- a/themes/ocean/source/css/_partial/article.styl
+++ b/themes/ocean/source/css/_partial/article.styl
@@ -217,6 +217,31 @@ $article-share-link
     background google-color
     text-shadow 0 1px darken(google-color, 20%)
 
+.emphasize
+  color: #FB6161
+  font-size: 1.8rem
+  font-weight: bold
+
+.emphasize-background
+  background-color: #FB6161
+  color: #FEF8F8
+  font-size: 1.8rem;
+  font-weight: bold;
+  width 100%
+  margin 5px 0px
+
+.emphasize-background-brown
+  background-color: #79605C
+  color: #FEF8F8
+  width 100%
+  margin 5px 0px
+  padding: 0px 5px;
+
+.center 
+    text-align center
+
+.strong
+    font-weight bold
 
 @import "tocbot"
 @import "gallery"
